--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,12 @@
-driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/library
-username=test_user
-password=12345678
+#driver=org.postgresql.Driver
+#url=jdbc:postgresql://localhost:5432/library
+#username=test_user
+#password=12345678
+
+hibernate.driver_class=org.postgresql.Driver
+hibernate.connection.url=jdbc:postgresql://localhost:5432/library
+hibernate.connection.username=test_user
+hibernate.connection.password=12345678
+
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql=true
